--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "Rafael Bernardo <rafamaxber@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.16.2",
     "express": "^4.15.3",
     "next": "^2.4.7",
     "react": "^15.6.1",
