--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "npm run init:client && npm run init:server",
-    "init:client": "npm install ./client/",
-    "init:server": "npm install ./server/"
+    "install:apps": "concurrently \"npm run init:client\" \"npm run init:server\"",
+    "start": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "init:client": "cd ./client/ && npm install",
+    "init:server": "cd ./server/ && npm install",
+    "dev:client": "cd ./client/ && npm run dev",
+    "dev:server": "cd ./server/ && npm run dev"
   },
   "author": "Rafael Bernardo <rafamaxber@gmail.com>",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "concurrently": "^3.5.0"
+  }
 }
